syntax = "proto3";

package File;

message Chunk {
  string file_name = 1;
  float total_size = 2;
  string checksum = 3;
  int32 part_number = 4;
  string checksum_algorithm = 5;
  string id = 6;
  bytes data = 7;
}

service FileUploadService {
  rpc Upload(stream Chunk) returns (stream UploadResponse) {}
}

message UploadResponse {
}
